--- a/Notebook/DataUmbrellaHikes.ipynb
+++ b/Notebook/DataUmbrellaHikes.ipynb
@@ -310,6 +310,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bb3b8f03-a6ff-46f9-ade3-625d64b37a6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cities_gdf['LastUpdate'] = cities_gdf['LastUpdate'].dt.strftime('%Y-%m-%d')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "080d0d6a",
    "metadata": {},
    "outputs": [],
@@ -399,6 +409,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4c0a59d1-f3b1-4dc6-8ce5-595e1a3b7b3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tstops_gdf['LastUpdated'] = tstops_gdf['LastUpdated'].dt.strftime('%Y-%m-%d')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ddd3b19b",
    "metadata": {},
    "outputs": [],
@@ -462,6 +482,16 @@
     "\n",
     "# replace the geometry with the 1-mile buffers\n",
     "tstops_UTM_buf['geometry'] = tstops_UTM_1mi_series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77af969c-e40a-4a90-bedb-1803779de99a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tstops_UTM_buf.head()"
    ]
   },
   {
@@ -534,7 +564,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -548,7 +578,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
